--- a/web/assets/css/site.css
+++ b/web/assets/css/site.css
@@ -7,6 +7,7 @@ body {
 
 a {
   color: #25458d;
+  font-weight: 500;
 }
 
 a:hover {
@@ -384,7 +385,7 @@ a:hover {
 }
 
 .navbar-opencfp {
-  background: #374146;
+  background: #25458d;
 }
 
 .navbar-opencfp .injected-svg {
