--- a/web/assets/css/site.css
+++ b/web/assets/css/site.css
@@ -6,8 +6,9 @@ body {
 }
 
 a {
-  color: #25458d;
-  font-weight: 500;
+  color: #000;
+  font-weight: 600;
+  -webkit-font-smoothing: antialiased;
 }
 
 a:hover {
@@ -166,8 +167,8 @@ a:hover {
 }
 
 .btn-opencfp--outlined:hover {
-  background: #FFF;
-  color: #e24b3b;
+  background: #000;
+  color: #F0DB4F;
 }
 
 .btn-opencfp--centered {
