--- a/templates/ideas.twig
+++ b/templates/ideas.twig
@@ -1,18 +1,39 @@
 {% extends "layouts/default.twig" %}
 {% block content %}
 <div class="container">
-    <h2 class="headline--beta">Call for Papers Talk Ideas</h2>
-    <p>
-        {{ site.title }} is not limited to just PHP-related talks. There have been
-        sessions covering a wide range of topics supporting PHP developers and DevOps
-        as well, and we encourage you to "think outside the box" to come up with your
-        own unique topics.
-    </p>
-    <p>
-        Due to financial constraints most conferences tend to pick speakers to present
-        multiple talks. Therefore <strong>it is advisable to submit a few talk ideas, not just one.</strong>
-        By submitting a single talk you may lessen your chances of being selected.
-    </p>
+    <h2 class="headline--beta">Call for Papers</h2>
+    <li>You can send as many proposals as you want, for both speaker and workshopper</li>
+    <li>You can submit talks in either English or Spanish (we will have interpreters at the event for both)</li>
+    <li>We will reach out to selected speakers on June 13 via email for confirmation of selection</li>
+    <li>Announcements will be done later via twitter and our websites.</li>
+
+    <h3>What do Speakers get?</h3>
+
+    <ul>        
+        <li>All expenses paid, flights (on a reasonable budget, depending origin), accommodation and daily stipend for food and others.</li>
+        <li>If you are a new parent (1 yr old or less), we will do our best to provide transportation and accommodation for your S.O.
+        <li>If required, we can make suggestions for child-care and will cover all costs.</li>
+        <li>The opportunity to impact the lives of over a hundred developers in a developing nation who have had very little chances to attend a software development conference</li>
+        <li>2 Free Conference Tickets (yourself and a guest) If you have already purchased tickets, we can't reimburse them but will help you transfer them to another attendee</li>
+        <li>Speakers Dinner An excellent time in the city of eternal Spring (we're still figuring out where to take you out)</li>
+    </ul>
+
+    <h3>What do local workshoppers get?</h3>
+    <ul>
+        <li>We'll be approving workshop expenses on a case by case basis, ideally we can provide the above for everyone as long as our budget permits.</li>
+    </ul>
+
+
+    <h3>Selection Process</h3>
+    <p>This is how we will select the proposals:</p>
+    <ul>
+        <li>Originality of the talk. We really want to offer the best content, we don't want the same talks given by the same people. Feel free to give it a creative and out of the box touch.</li>
+        <li>Topic and content driven. It doesn't matter who you are, what we'll take in to account will be the topic and description of your talk or workshop.</li>
+        <li>We will have two rounds of voting. The team in charge of the selection of the speakers will be published here</li>
+        <li>all voting will be done in the blind (meaning, we will anonymize all proposals so judges can't know who submitted what)</li>
+        <li>All will be rated from 0 to 10. Then the top 10 will be rated from 0 to 5.</li>
+        <li>Workshops won't be mixed with talks. So don't worry, if you send a proposal for a workshop, you will only compete between workshop, and viceversa.</li>
+    </ul>
     <p>
         To get the ideas flowing, here's a few suggestions:
     </p>
