--- a/templates/package.twig
+++ b/templates/package.twig
@@ -1,12 +1,14 @@
 {% extends "layouts/default.twig" %}
 {% block content %}
 <div class="container">
-    <h2 class="headline--beta">{{ site.title }} Speaker Information</h2>
-    <p>
-        We're committed to bringing together some of the best speakers from all around the
-        world to share their knowledge with you here. We provide a travel and
-        accommodation package to all selected speakers to help make this possible.
-    </p>
+    <h2 class="headline--beta">Speaker Information</h2>
+    <ul>
+        <li>You can send as many proposals as you want, for both speaker and workshopper</li>
+        <li>You can submit talks in either English or Spanish (we will have interpreters at the event for both)</li>
+        <li>We will reach out to selected speakers on June 13 via email for confirmation of selection</li>
+        <li>Announcements will be done later via twitter and our websites.</li>
+    </ul>
+
     <h4 class="headline--alpha">About the event</h4>
     <p>
         Speakers will be provided with a projector, a wireless lapel microphone and a screen
@@ -18,25 +20,37 @@
         When the Call for Papers closes, the organizers will sort through the submissions, making
         their selections. Speakers will be notified as soon as the selection process has been completed.
     </p>
-    <h4 class="headline--alpha">This year's package</h4>
+
+    <h4 class="headline--alpha">Selection Process</h4>
     <p>
-        Our speaker package for this year's event includes:
+        This is how we will select the proposals:
     </p>
     <ul>
-        <li>Full conference pass</li>
-        <li>Access to conference tutorials (lunch not included)</li>
-        <li>For speakers remote to the Area:</li>
-        <ul>
-            <li>Complimentary airfare/travel (according to conference policy)</li>
-            <li>2 complimentary hotel nights (additional 1 hotel night for speakers presenting a tutorial)</li>
-        </ul>
-        <li>Lunch, receptions and activities included in regular conference</li>
-        <li>We'll pick you up and drop you off to/from the airport so you don't have to worry about it.</li>
+        <li>Originality of the talk. We really want to offer the best content, we don't want the same talks given by the same people. Feel free to give it a creative and out of the box touch.</li>
+        <li>Topic and content driven. It doesn't matter who you are, what we'll take in to account will be the topic and description of your talk or workshop.</li>
+        <li>We will have two rounds of voting. The team in charge of the selection of the speakers will be published here</li>
+        <li>all voting will be done in the blind (meaning, we will anonymize all proposals so judges can't know who submitted what)</li>
+        <li>All will be rated from 0 to 10. Then the top 10 will be rated from 0 to 5.</li>
+        <li>Workshops won't be mixed with talks. So don't worry, if you send a proposal for a workshop, you will only compete between workshop, and viceversa.</li>
     </ul>
-    <p>
-        International speakers are encouraged to <a href="/">submit their ideas</a>, but because of budget restrictions,
-        we can only accept a limited number of speakers from outside the country.
-    </p>
+    
+    <h4 class="headline--alpha">What do Speakers get?</h4>
+
+    <ul>        
+        <li>Full conference pass</li>
+        <li>All expenses paid, flights (on a reasonable budget, depending origin), accommodation and daily stipend for food and others.</li>
+        <li>If you are a new parent (1 yr old or less), we will do our best to provide transportation and accommodation for your S.O.
+        <li>If required, we can make suggestions for child-care and will cover all costs.</li>
+        <li>The opportunity to impact the lives of over a hundred developers in a developing nation who have had very little chances to attend a software development conference</li>
+        <li>2 Free Conference Tickets (yourself and a guest) If you have already purchased tickets, we can't reimburse them but will help you transfer them to another attendee</li>
+        <li>Speakers Dinner An excellent time in the city of eternal Spring (we're still figuring out where to take you out)</li>
+    </ul>
+
+    <h4 class="headline--alpha">What do local workshoppers get?</h4>
+    <ul>
+        <li>We'll be approving workshop expenses on a case by case basis, ideally we can provide the above for everyone as long as our budget permits.</li>
+    </ul>
+    
     <h4 class="headline--alpha">Tips for Submission</h4>
     <p>
         We <i>strongly</i> encourage potential speakers to submit more than one submission on more than one topic. The
