--- a/templates/forms/_talk.twig
+++ b/templates/forms/_talk.twig
@@ -25,8 +25,8 @@
         <label for="form-talk-type" class="col-sm-2 control-label">Talk Type</label>
         <div class="col-sm-10">
             <select id="form-talk-type" name="type" class="form-control">
-                <option value="regular" {% if type == 'regular' %}selected {% endif %}>Regular</option>
-                <option value="tutorial" {% if type == 'tutorial' %}selected {% endif %}>Tutorial</option>
+                <option value="talk" {% if type == 'talk' %}selected {% endif %}>Talk</option>
+                <option value="workshop" {% if type == 'workshop' %}selected {% endif %}>Workshop</option>
             </select>
         </div>
     </div>
