--- a/templates/_marketing.twig
+++ b/templates/_marketing.twig
@@ -4,7 +4,7 @@
             <h3 class="headline headline--beta">Got a talk idea? We want to see it!</h3>
             <p>
                 We’re pleased to announce our conference, {{ site.title }} should be
-                one of the best JsvsScript conferences where community members from around
+                one of the best JavaScript conferences where community members from around
                 the world come together to learn and share information about the latest
                 trends and technologies in professional JavaScript development.
             </p>
