--- a/templates/forms/_talk.twig
+++ b/templates/forms/_talk.twig
@@ -34,17 +34,31 @@
         <label for="form-talk-category" class="col-sm-2 control-label">Talk Category</label>
         <div class="col-sm-10">
             <select id="form-talk-category" name="category" class="form-control">
-                <option value="api" {% if category == 'api' %}selected {% endif %}>APIs (REST, SOAP, etc.)</option>
-                <option value="continuousdelivery" {% if category == 'continuousdelivery' %}selected {% endif %}>Continuous Delivery</option>
-                <option value="database" {% if category == 'database' %}selected {% endif %}>Database</option>
-                <option value="development" {% if category == 'development' %}selected {% endif %}>Development</option>
-                <option value="devops" {% if category == 'devops' %}selected {% endif %}>Devops</option>
-                <option value="framework" {% if category == 'framework' %}selected {% endif %}>Framework</option>
-                <option value="ibmi" {% if category == 'ibmi' %}selected {% endif %}>IBMi</option>
-                <option value="javascript" {% if category == 'javascript' %}selected {% endif %}>JavaScript</option>
+                <option value="3d_webgl_vr" {% if category == '3d_webgl_vr' %}selected {% endif %}>3D / WebGL / VR</option>
+                <option value="async" {% if category == 'async' %}selected {% endif %}>Async</option>
+                <option value="art" {% if category == 'art' %}selected {% endif %}>Art</option>
+                <option value="api" {% if category == 'api' %}selected {% endif %}>API</option>
+                <option value="audio_music" {% if category == 'audio_music' %}selected {% endif %}>Audio &amp; Music</option>
+                <option value="circuit_breakers" {% if category == 'circuit_breakers' %}selected {% endif %}>Circuit Breakers</option>
+                <option value="continuous_delivery" {% if category == 'continuous_delivery' %}selected {% endif %}>Continuous Delivery</option>
+                <option value="data_visualization" {% if category == 'data_visualization' %}selected {% endif %}>Data Visualization</option>
+                <option value="database_big data" {% if category == 'database_big data' %}selected {% endif %}>Database / Big Data</option>
+                <option value="dev_ops" {% if category == 'dev_ops' %}selected {% endif %}>Dev Ops</option>
+                <option value="dev_tools" {% if category == 'dev_tools' %}selected {% endif %}>Dev Tools</option>
+                <option value="distributed_programming" {% if category == 'distributed_programming' %}selected {% endif %}>Distributed Programming</option>
+                <option value="es_next" {% if category == 'es_next' %}selected {% endif %}>ES 6 | 2015 | 2016 | Next</option>
+                <option value="functional_programming" {% if category == 'functional_programming' %}selected {% endif %}>Functional Programming</option>
+                <option value="hardware" {% if category == 'hardware' %}selected {% endif %}>Hardware</option>
+                <option value="http_microservices" {% if category == 'http_microservices' %}selected {% endif %}>HTTP Microservices</option>
+                <option value="machine_learning" {% if category == 'machine_learning' %}selected {% endif %}>Machine Learning with JS</option>
+                <option value="new_frontend_technologies" {% if category == 'new_frontend_technologies' %}selected {% endif %}>New frontend technologies: React / Redux / Angular 2 / Ember 2</option>
+                <option value="nodejs" {% if category == 'nodejs' %}selected {% endif %}>Node.js</option>
+                <option value="other_js_languages" {% if category == 'other_js_languages' %}selected {% endif %}>Other JS Languages: TypeScript, Flow, Dart, ClojureScript, Elm, CoffeeScript</option>
+                <option value="performance" {% if category == 'performance' %}selected {% endif %}>Performance</option>
+                <option value="reactive_programming" {% if category == 'reactive_programming' %}selected {% endif %}>Reactive Programming</option>
                 <option value="security" {% if category == 'security' %}selected {% endif %}>Security</option>
                 <option value="testing" {% if category == 'testing' %}selected {% endif %}>Testing</option>
-                <option value="uiux" {% if category == 'uiux' %}selected {% endif %}>UI/UX</option>
+                <option value="ui_ux" {% if category == 'ui_ux' %}selected {% endif %}>UI/UX</option>
                 <option value="other" {% if category == 'other' %}selected {% endif %}>Other</option>
             </select>
         </div>
