--- a/templates/ideas.twig
+++ b/templates/ideas.twig
@@ -16,6 +16,36 @@
         <li>Announcements will be done later via twitter and our websites.</li>
     </ul>
 
+    <h4 class="headline--alpha">Topics</h4>
+    <p>Here we list some hot-topics that you might be interested into, nonetheless we recommend you to be creative! We love to hear about new and different topics.</p>
+    <ul>
+        <li>3D / WebGL / VR</li>
+        <li>Async</li>
+        <li>Art</li>
+        <li>API</li>
+        <li>Audio &amp; Music</li>
+        <li>Circuit Breakers</li>
+        <li>Continuous Delivery</li>
+        <li>Data Visualization</li>
+        <li>Database / Big Data</li>
+        <li>Dev Ops</li>
+        <li>Dev Tools</li>
+        <li>Distributed Programming</li>
+        <li>ES 6 | 2015 | 2016 | Next</li>
+        <li>Functional Programming</li>
+        <li>Hardware</li>
+        <li>HTTP Microservices</li>
+        <li>Machine Learning with JS</li>
+        <li>New frontend technologies: React / Redux / Angular 2 / Ember 2</li>
+        <li>Node.js</li>
+        <li>Other JS Languages: TypeScript, Flow, Dart, ClojureScript, Elm, CoffeeScript</li>
+        <li>Performance</li>
+        <li>Reactive Programming</li>
+        <li>Security</li>
+        <li>Testing</li>
+        <li>UI/UX</li>
+    </ul>
+
     <h4 class="headline--alpha">Selection Process</h4>
     <p>This is how we will select the proposals:</p>
     <ul>
