--- a/templates/ideas.twig
+++ b/templates/ideas.twig
@@ -17,7 +17,7 @@
     </ul>
 
     <h4 class="headline--alpha">Topics</h4>
-    <p>Here we list some hot-topics that you might be interested into, nonetheless we recommend you to be creative! We love to hear about new and different topics.</p>
+    <p>We've listed a few hot-topics to get you thinking about your proposal, nonetheless we recommend you be creative! We love to hear about new and different topics.</p>
     <ul>
         <li>3D / WebGL / VR</li>
         <li>Async</li>
