updating copies on ideas (adding durations) and package

--- a/templates/ideas.twig
+++ b/templates/ideas.twig
@@ -14,6 +14,7 @@
         <li>You can submit talks in either English or Spanish (we will have interpreters at the event for both)</li>
         <li>We will reach out to selected speakers on June 13 via email for confirmation of selection</li>
         <li>Announcements will be done later via twitter and our websites.</li>
+        <li><strong>Talks duration is 30mins, and workshops duration is 1hr 30mins.</strong></li>
     </ul>
 
     <h4 class="headline--alpha">Topics</h4>
