Adding Anonymize option to config yml and allowing anonymized talk evaluation

--- a/templates/admin/talks/view.twig
+++ b/templates/admin/talks/view.twig
@@ -14,7 +14,11 @@
                 {% if talk.level is defined %}<span class="label label-primary">{{ talk.level }}</span>{% endif %}
                 {% if talk.category is defined %}<span class="label label-warning">{{ talk.category }}</span>{% endif %}
             </p>
+
+            {% if site.anonymize == false %}
             <h5><strong>Submitted by:</strong> <a href="{{ url('admin_speaker_view', { id: talk.user_id }) }}">{{ speaker.first_name }} {{ speaker.last_name }}</a></h5>
+            {% endif %}
+            
             <ul class="nav nav-tabs" role="tablist">
                 <li role="presentation" class="active"><a href="#abstract" aria-controls="abstract" role="tab" data-toggle="tab">Abstract</a></li>
                 <li role="presentation"><a href="#additional-info" aria-controls="profile" role="tab" data-toggle="tab">Additional Information</a></li>
