--- a/templates/forms/_talk.twig
+++ b/templates/forms/_talk.twig
@@ -25,9 +25,9 @@
         <label for="form-talk-type" class="col-sm-2 control-label">Talk Type</label>
         <div class="col-sm-10">
             <select id="form-talk-type" name="type" class="form-control">
-                {% for typeKey, displayType in talkTypes %}
+                {#% for typeKey, displayType in talkTypes %}
                 <option value="{{ typeKey }}" {% if type == typeKey %}selected {% endif %}>{{ displayType }}</option>
-                {% endfor %}
+                {% endfor %#}
             </select>
         </div>
     </div>
