testing display mode

--- a/templates/ideas.twig
+++ b/templates/ideas.twig
@@ -20,7 +20,7 @@
     <h4 class="headline--alpha">Topics</h4>
     <p>We've listed a few hot-topics to get you thinking about your proposal, nonetheless we recommend you be creative! We love to hear about new and different topics.</p>
     <ul>
-        {{talkTypes}}
+        {{talkCategories}}
         {#% for typeKey, displayType in talkTypes %}
         <li>{{ displayType }}</li>
         {% endfor %#}
