--- a/templates/_header.twig
+++ b/templates/_header.twig
@@ -32,7 +32,7 @@
         <div class="row">
             {% if site.event_location is defined and site.date_format is defined %}
             <div class="col-md-8"><h3 class="headline headline--alpha">
-                {{ site.title }} is  on {{ site.arrival|date('M dS') }} to {{ site.departure|date('M dS') }} in {{ site.event_location }}
+                {{ site.title }} is  on {{ site.arrival|date('M dS') }} to {{ site.departure|date('M dS') }}
             </h3></div>
             {%  else %}
                 <div class="col-md-8"><h3 class="headline headline--alpha">For More Information About The Conference</h3></div>
