jsconf logo back

--- a/templates/_header.twig
+++ b/templates/_header.twig
@@ -2,7 +2,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
-                    <img src="/assets/img/opencfp_generic_logo.png" class="svg-inject event-logo" alt="Event Logo">
+                    <img src="/assets/img/logo.svg" class="svg-inject event-logo" alt="JSConf.co">
                 </div>
                 <div class="col-md-9">
                     {% if cfp_open %}
