adjusting styles on banner

--- a/web/assets/css/site.css
+++ b/web/assets/css/site.css
@@ -54,8 +54,8 @@ a:hover {
 }
 
 .section--light {
-  background: rgb(0,176,216);
-  color: #fff;
+  background: #FEE982;
+  color: #564f2d;
 }
 
 .headline {
