adjusting strongly style

--- a/templates/ideas.twig
+++ b/templates/ideas.twig
@@ -3,7 +3,7 @@
 <div class="container">
     <h2 class="headline--beta">Call for Papers</h2>
     <p>
-        We <i>strongly</i> encourage potential speakers to submit more than one submission on more than one topic. The
+        We <b>strongly</b> encourage potential speakers to submit more than one submission on more than one topic. The
         more submissions you contribute, the more options you give us to pick you. Be sure your talk title and abstract
         define the exact topic you want to talk about and what you hope people will learn from the session. In previous
         years, some submissions sounded interesting but we just didn't have enough detail for them to make the final cut.
